delete row + fileexplorer bug javitva + cliens uj size linux miatt